add google search

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -98,5 +98,20 @@
   {% else %}
   <meta property="og:image" content="" />
   {% endif %}
-  
+ 
+
+	<script>
+  (function() {
+		var cx = '010710202058696692700:vramq4gojbo';
+		var gcse = document.createElement('script');
+		gcse.type = 'text/javascript';
+		gcse.async = true;
+		gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+		var s = document.getElementsByTagName('script')[0];
+		s.parentNode.insertBefore(gcse, s);
+	})();
+	</script>
+	<gcse:search></gcse:search>
+
+
 </head>
